--- a/apps/mobile/pushtracker/src/app/scss/login/_login-default.scss
+++ b/apps/mobile/pushtracker/src/app/scss/login/_login-default.scss
@@ -3,9 +3,12 @@
 
 .login-layout {
   @extend .LOGIN_LAYOUT_BASE;
+  background-color: $white;
 
   .login-form {
     @extend .LOGIN_FORM_BASE;
+    background-color: $white;
+    color: $black;
   }
 
   .submit-btn {
